--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Заголовок</h1>
+    <h1>Заголовок 2</h1>
 
     <section>Секция 1</section>
     
