--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <h1>Заголовок 2</h1>
 
-    <section>Секция 1</section>
+    <section>Секция 1
+        <p>Текст</p>
+    </section>
     
 </body>
 </html>
